# worldclone

./: .env.example  .gitignore  LICENSE  LINKEDIN_POST.md  README.md  pyproject.toml
.github/workflows/: test.yml
data/: iran_cluster.json  iran_timeline.json
data/films/: candidates.json
data/sports/: games.json  tonight_2026_04_29.json  weekend_2026_05_01.json  weekend_retry.json
docs/: RESULTS.md  architecture.md
results/film_forecasts/big_clean_20260429_1312Z/: a-working-man-2025_first_week.md  first_week.jsonl  (+12 more)
scripts/: accumulator_analysis.py  build_film_candidates.py  build_iran_cluster.py  bulk_fetch_films.py  classify_pool.py  fetch_iran_bet_history.py  forecast_manifold_market.py  plot_boxoffice_calibration.py  plot_social_cards.py  plot_weekend_picks.py  run_film_forecaster.py  run_film_monte_carlo.py  run_films_overnight.sh  run_forecaster_iran.py  run_overnight.sh  run_simulation_iran.py  run_sports_forecaster.py  score_films.py  score_iran.py  score_sports.py
tests/: test_boxoffice_scoring.py  test_brier.py  test_manifold_loader.py  test_monte_carlo.py
worldclone/: __init__.py
worldclone/boxoffice/: metadata.py  monte_carlo.py  pipeline.py  prompts.py  schemas.py
worldclone/common/: io.py  llm.py  manifold.py
worldclone/forecaster/: pipeline.py  prompts.py  retrieval.py
worldclone/scoring/: baselines.py  boxoffice.py  brier.py  sports.py
worldclone/simulation/: actors.py  extract.py  gm.py  loop.py  questionnaire.py  scenario.py
worldclone/sports/: pipeline.py  prompts.py  schemas.py  uk_odds.py
worldclone/tracker/: store.py
(+27 files in other folders)
